@@ -4,24 +4,17 @@ import com.h2ai.insights.dto.OutcomeUpdateRequest;
 import com.h2ai.insights.dto.PredictionRequest;
 import com.h2ai.insights.dto.PredictionRecordResponse;
 import com.h2ai.insights.dto.SurvivalPredictionResponse;
-import com.h2ai.insights.dto.TrainingSyncResponse;
 import com.h2ai.insights.entity.PredictionRecord;
 import com.h2ai.insights.entity.User;
 import com.h2ai.insights.repository.PredictionRecordRepository;
 import com.h2ai.insights.repository.UserRepository;
 import org.springframework.beans.factory.annotation.Value;
-import org.springframework.data.jpa.domain.Specification;
-import org.springframework.http.HttpEntity;
-import org.springframework.http.HttpMethod;
 import org.springframework.http.ResponseEntity;
 import org.springframework.stereotype.Service;
 import org.springframework.web.client.RestTemplate;
 
-import java.time.LocalDateTime;
-import java.util.ArrayList;
-import java.util.LinkedHashMap;
 import java.util.List;
-import java.util.Map;
+import java.util.stream.Collectors;
 
 @Service
 public class PredictionService {
@@ -63,84 +56,17 @@ public class PredictionService {
         return toResponse(saved);
     }
 
-    public List<PredictionRecordResponse> predictAll(String name) {
-        List<User> patients = (name == null || name.isBlank())
-                ? userRepository.findAll()
-                : userRepository.findByNameContainingIgnoreCaseOrderByNameAsc(name.trim());
-
-        if (patients.isEmpty()) {
-            return List.of();
-        }
-
-        List<PredictionRequest> requestPatients = patients.stream().map(this::toPredictionRequest).toList();
-
-        Map<String, Object> payload = new LinkedHashMap<>();
-        payload.put("patients", requestPatients);
-
-        ResponseEntity<SurvivalPredictionResponse[]> response = restTemplate.postForEntity(
-                resolveBulkPredictEndpoint(),
-                payload,
-                SurvivalPredictionResponse[].class
-        );
-
-        SurvivalPredictionResponse[] predictions = response.getBody();
-        if (predictions == null) {
-            throw new IllegalStateException("Modal bulk API returned an empty response body");
-        }
-        if (predictions.length != patients.size()) {
-            throw new IllegalStateException("Modal bulk response size does not match patient count");
-        }
-
-        List<PredictionRecordResponse> records = new ArrayList<>();
-        for (int i = 0; i < patients.size(); i++) {
-            PredictionRecord saved = savePredictionRecord(patients.get(i), predictions[i]);
-            records.add(toResponse(saved));
-        }
-        return records;
-    }
-
-    public List<PredictionRecordResponse> search(
-            String name,
-            Integer minAge,
-            Integer maxAge,
-            String riskGroup,
-            String actualOutcome
-    ) {
-        Specification<PredictionRecord> spec = (root, query, cb) -> cb.conjunction();
-
-        if (name != null && !name.isBlank()) {
-            String namePattern = "%" + name.trim().toLowerCase() + "%";
-            spec = spec.and((root, query, cb) -> cb.like(
-                    cb.lower(root.join("patient").get("name")),
-                    namePattern
-            ));
-        }
-
-        if (minAge != null) {
-            spec = spec.and((root, query, cb) -> cb.greaterThanOrEqualTo(
-                    root.join("patient").get("age"),
-                    minAge
-            ));
-        }
-
-        if (maxAge != null) {
-            spec = spec.and((root, query, cb) -> cb.lessThanOrEqualTo(
-                    root.join("patient").get("age"),
-                    maxAge
-            ));
-        }
-
-        if (riskGroup != null && !riskGroup.isBlank()) {
-            String riskPattern = "%" + riskGroup.trim().toLowerCase() + "%";
-            spec = spec.and((root, query, cb) -> cb.like(cb.lower(root.get("riskGroup")), riskPattern));
-        }
-
-        if (actualOutcome != null && !actualOutcome.isBlank()) {
-            String outcomePattern = "%" + actualOutcome.trim().toLowerCase() + "%";
-            spec = spec.and((root, query, cb) -> cb.like(cb.lower(root.get("actualOutcome")), outcomePattern));
-        }
-
-        return predictionRecordRepository.findAll(spec).stream().map(this::toResponse).toList();
+    public List<PredictionRecordResponse> search(String name) {
+        return predictionRecordRepository.findAll().stream()
+                .filter(record -> {
+                    if (name == null || name.isBlank()) {
+                        return true;
+                    }
+                    String patientName = record.getPatient().getName();
+                    return patientName != null && patientName.toLowerCase().contains(name.trim().toLowerCase());
+                })
+                .map(this::toResponse)
+                .collect(Collectors.toList());
     }
 
     public PredictionRecordResponse updateActualOutcome(Long predictionId, OutcomeUpdateRequest request) {
@@ -154,75 +80,49 @@ public class PredictionService {
         record.setActualOutcome(request.getActualOutcome().trim());
         record.setActualOutcomeDate(request.getActualOutcomeDate());
         record.setActualOutcomeNotes(request.getActualOutcomeNotes());
-        record.setOverallSurvivalMonths(request.getOverallSurvivalMonths());
-        record.setDeceased(request.getDeceased());
-        record.setFractionGenomeAltered(request.getFractionGenomeAltered());
-        record.setMutationCount(request.getMutationCount());
-        record.setTmbNonsynonymous(request.getTmbNonsynonymous());
-        record.setYearOfDiagnosis(request.getYearOfDiagnosis());
 
         PredictionRecord saved = predictionRecordRepository.save(record);
         return toResponse(saved);
     }
 
-    public TrainingSyncResponse syncLabeledOutcomesToRetrainingApi() {
-        List<PredictionRecord> labeled = predictionRecordRepository.findByActualOutcomeIsNotNull();
-        if (labeled.isEmpty()) {
-            return new TrainingSyncResponse(0, 0, "No labeled outcomes available to sync");
-        }
-
-        int sent = 0;
-        for (PredictionRecord record : labeled) {
-            if (!isReadyForRetrain(record)) {
-                continue;
-            }
-
-            ResponseEntity<String> response = restTemplate.exchange(
-                    resolveRetrainEndpoint(),
-                    HttpMethod.POST,
-                    new HttpEntity<>(toRetrainPayload(record)),
-                    String.class
-            );
-
-            if (!response.getStatusCode().is2xxSuccessful()) {
-                throw new IllegalStateException("Retraining API sync failed with status " + response.getStatusCode());
-            }
-
-            record.setRetrainSyncedAt(LocalDateTime.now());
-            predictionRecordRepository.save(record);
-            sent++;
-        }
-
-        return new TrainingSyncResponse(sent, labeled.size(), "Synced labeled outcomes to retraining API");
-    }
-
     private PredictionRequest toPredictionRequest(User patient) {
         return new PredictionRequest(
                 patient.getAge(),
-                patient.getGender() != null ? patient.getGender().name() : null,
-                patient.getPriorMalignancy(),
-                patient.getPriorTreatment(),
-                patient.getEcogPerformanceStatus()
+                patient.getMutationCount(),
+                patient.getTmb(),
+                patient.getFga(),
+                defaultUnknown(patient.getSex()),
+                defaultUnknown(patient.getRace()),
+                defaultUnknown(patient.getEthnicity())
         );
     }
 
     private PredictionRecord savePredictionRecord(User patient, SurvivalPredictionResponse prediction) {
+        SurvivalPredictionResponse.ClinicianOutput clinician = prediction.getClinicianOutput();
+        SurvivalPredictionResponse.SurvivalProbabilities probs = clinician != null
+                ? clinician.getSurvivalProbabilities()
+                : null;
+
         PredictionRecord record = new PredictionRecord();
         record.setPatient(patient);
-        record.setSurvival6mo(prediction.getSurvival6mo());
-        record.setSurvival12mo(prediction.getSurvival12mo());
-        record.setSurvival24mo(prediction.getSurvival24mo());
-        record.setPartialHazard(prediction.getPartialHazard());
-        record.setRiskGroup(prediction.getRiskGroup());
-        record.setInterpretation(prediction.getInterpretation());
-        record.setSurvivalCurvePng(prediction.getSurvivalCurvePng());
-        record.setExpectedOutcome(buildExpectedOutcome(prediction));
+        record.setSurvival6mo(probs != null ? probs.getSixMonths() : null);
+        record.setSurvival12mo(probs != null ? probs.getTwelveMonths() : null);
+        record.setSurvival24mo(probs != null ? probs.getTwentyFourMonths() : null);
+        record.setRiskScore(clinician != null ? clinician.getRiskScore() : null);
+        record.setRiskGroup(clinician != null ? clinician.getRiskGroup() : null);
+        record.setEstimatedMedianSurvivalMonths(clinician != null ? clinician.getEstimatedMedianSurvivalMonths() : null);
+        record.setPlainLanguageSummary(clinician != null ? clinician.getPlainLanguageSummary() : null);
+        record.setKeyDrivers(clinician != null && clinician.getKeyDrivers() != null
+                ? String.join(", ", clinician.getKeyDrivers())
+                : null);
+        record.setTechnicalOutput(prediction.getTechnicalOutput() != null ? prediction.getTechnicalOutput().toString() : null);
+        record.setExpectedOutcome(buildExpectedOutcome(record));
         return predictionRecordRepository.save(record);
     }
 
-    private String buildExpectedOutcome(SurvivalPredictionResponse prediction) {
-        String risk = prediction.getRiskGroup() == null ? "Unknown" : prediction.getRiskGroup();
-        Double twelveMonth = prediction.getSurvival12mo();
+    private String buildExpectedOutcome(PredictionRecord record) {
+        String risk = record.getRiskGroup() == null ? "Unknown" : record.getRiskGroup();
+        Double twelveMonth = record.getSurvival12mo();
         if (twelveMonth == null) {
             return "Risk Group: " + risk;
         }
@@ -239,72 +139,31 @@ public class PredictionService {
         response.setSurvival6mo(record.getSurvival6mo());
         response.setSurvival12mo(record.getSurvival12mo());
         response.setSurvival24mo(record.getSurvival24mo());
-        response.setPartialHazard(record.getPartialHazard());
+        response.setRiskScore(record.getRiskScore());
         response.setRiskGroup(record.getRiskGroup());
-        response.setInterpretation(record.getInterpretation());
-        response.setSurvivalCurvePng(record.getSurvivalCurvePng());
+        response.setEstimatedMedianSurvivalMonths(record.getEstimatedMedianSurvivalMonths());
+        response.setPlainLanguageSummary(record.getPlainLanguageSummary());
+        response.setKeyDrivers(record.getKeyDrivers());
+        response.setTechnicalOutput(record.getTechnicalOutput());
         response.setExpectedOutcome(record.getExpectedOutcome());
         response.setActualOutcome(record.getActualOutcome());
         response.setActualOutcomeDate(record.getActualOutcomeDate());
         response.setActualOutcomeNotes(record.getActualOutcomeNotes());
-        response.setOverallSurvivalMonths(record.getOverallSurvivalMonths());
-        response.setDeceased(record.getDeceased());
-        response.setFractionGenomeAltered(record.getFractionGenomeAltered());
-        response.setMutationCount(record.getMutationCount());
-        response.setTmbNonsynonymous(record.getTmbNonsynonymous());
-        response.setYearOfDiagnosis(record.getYearOfDiagnosis());
         response.setCreatedAt(record.getCreatedAt());
         return response;
     }
 
-    private boolean isReadyForRetrain(PredictionRecord record) {
-        return record.getOverallSurvivalMonths() != null
-                && record.getDeceased() != null
-                && record.getFractionGenomeAltered() != null
-                && record.getMutationCount() != null
-                && record.getTmbNonsynonymous() != null
-                && record.getYearOfDiagnosis() != null;
-    }
-
-    private Map<String, Object> toRetrainPayload(PredictionRecord record) {
-        Map<String, Object> data = new LinkedHashMap<>();
-        data.put("age", record.getPatient().getAge());
-        data.put("gender", record.getPatient().getGender() != null ? record.getPatient().getGender().name() : null);
-        data.put("prior_malignancy", record.getPatient().getPriorMalignancy());
-        data.put("prior_treatment", record.getPatient().getPriorTreatment());
-        data.put("overall_survival_months", record.getOverallSurvivalMonths());
-        data.put("deceased", record.getDeceased());
-        data.put("fraction_genome_altered", record.getFractionGenomeAltered());
-        data.put("mutation_count", record.getMutationCount());
-        data.put("tmb_nonsynonymous", record.getTmbNonsynonymous());
-        data.put("year_of_diagnosis", record.getYearOfDiagnosis());
-        return data;
-    }
-
     private String resolvePredictEndpoint() {
-        return resolveBaseModalUrl() + "/predict";
-    }
-
-    private String resolveBulkPredictEndpoint() {
-        return resolveBaseModalUrl() + "/predict/bulk";
-    }
-
-    private String resolveRetrainEndpoint() {
-        return resolveBaseModalUrl() + "/outcomes/retrain";
-    }
-
-    private String resolveBaseModalUrl() {
         if (modalApiUrl == null || modalApiUrl.isBlank()) {
             throw new IllegalStateException("MODAL_API_URL is not configured");
         }
+        return modalApiUrl.trim();
+    }
 
-        String base = modalApiUrl.trim();
-        if (base.endsWith("/predict")) {
-            base = base.substring(0, base.length() - "/predict".length());
+    private String defaultUnknown(String value) {
+        if (value == null || value.isBlank()) {
+            return "Unknown";
         }
-        if (base.endsWith("/")) {
-            base = base.substring(0, base.length() - 1);
-        }
-        return base;
+        return value;
     }
 }
